--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ ABOUT
   #projects .project button{
     font-size: 1.7vw;
   }
+  #about div.profile-img {
+    min-width: 180px;
+  }
 }
 
 /******************
