--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ header div.nav-links {
   width:30px;
   display: none;
 }
+h2{
+  font-size:2.5vw;
+}
 h4 {
   font-size: 1.2vw;
 }
@@ -187,6 +190,9 @@ h3{
   }
   h4 {
     font-size: 2.2vw;
+  }
+  h2{
+    font-size: 5vw;
   }
 
   #projects .project .proj-desc {
