--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ Skills
     border-radius: 18px;
     overflow: hidden;
     width: 70%;
+    /* border: 1px solid #303030; */
 }
 .proj-title{
   margin-top: 50px;
@@ -188,6 +189,12 @@ h3{
     flex-direction: column-reverse;
     justify-content: center;
   }
+  header a {
+    font-size: 15px;
+  }
+  h3{
+    font-size:3.5vw;
+  }
   h4 {
     font-size: 2.2vw;
   }
@@ -207,6 +214,8 @@ h3{
   #projects .project .proj-img {
     margin-bottom: 33px;
     margin: 0px auto 30px;
+    width: 100%;
+    
 }
   #projects .project {
     flex-direction:column-reverse;
@@ -239,6 +248,9 @@ h3{
   h3{
     font-size:5vw
   }
+  .proj-title {
+    margin-top: 10px;
+}
 
 
 }
